# Local-Ai-coding-agent

./: .gitignore  README.md  pyproject.toml
cloii-cli/: README.md  pyproject.toml
cloii-cli/cloii_cli/: __main__.py  cli.py  config.py
cloii-cli/cloii_cli/providers/: __init__.py
cloii-cli/cloii_cli/tools/: __init__.py
cloii_cli/: __init__.py  agent.py  cli.py  cli_ui.py  server.py
cloii_cli/providers/: ollama.py  openai_compat.py
