[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cloii-cli"
version = "1.0.0"
description = "Personal AI coding agent CLI — local and free-tier cloud models"
authors = [{name = "Cloii"}]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.scripts]
mycli = "cloii_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["cloii_cli*"]
